--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sushi</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title><%= yield(:title) || "Hip Cleaner" %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="<%= (yield(:description) || "").squish %>">
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= yield(:stylesheets) %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -16,5 +19,7 @@
 
 <%= yield %>
 
+<%= javascript_include_tag 'application' %>
+<%= yield(:js) %>
 </body>
 </html>
