--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -7,27 +7,27 @@
     </li>
     <li>
       <%= link_to new_order_path do %>
-        <i class="fa fa-check"></i> Réserver un groom
+        <i class="fa fa-check width-40"></i> Réserver un groom
       <% end %>
     </li>
     <li>
-      <%= link_to "#" do %>
-        <i class="fa fa-euro"></i> Tarifs
+      <%= link_to tarifs_path do %>
+        <i class="fa fa-euro width-40"></i> Tarifs
       <% end %>
     </li>
     <li>
       <%= link_to edit_user_path(current_user) do %>
-        <i class="fa fa-user"></i> Profil
+        <i class="fa fa-user width-40"></i> Profil
       <% end %>
     </li>
     <li>
       <%= link_to orders_path do %>
-        <i class="fa fa-euro"></i> Commandes
+        <i class="fa fa-euro width-40"></i> Commandes
       <% end %>
     </li>
     <li>
       <%= link_to destroy_user_session_path do %>
-        <i class="fa fa-sign-out"></i> Déconnexion
+        <i class="fa fa-sign-out width-40"></i> Déconnexion
       <% end %>
     </li>
   </ul>
