--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -4,16 +4,16 @@
     <%= f.date_field :pickup_date, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :pickup_time, "Date de récupération" %>
-    <%= f.date_field :pickup_date, class: "form-control" %>
+    <%= f.label :pickup_time, "A quelle heure" %>
+    <%= f.select :pickup_time, Order::TIMERANGES, {}, {class: "form-control"} %>
   </div>
   <div class="form-group">
     <%= f.label :delivery_date, "Date de restitution" %>
     <%= f.date_field :delivery_date, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :pickup_time, "Date de récupération" %>
-    <%= f.date_field :pickup_time, class: "form-control" %>
+    <%= f.label :delivery_time, "A quelle heure" %>
+    <%= f.select :delivery_time, Order::TIMERANGES, {}, {class: "form-control"} %>
   </div>
   <%= f.submit "Réserver", class: "btn btn-primary" %>
 <% end %>
