--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
-      Home
-    </div>
-  </div>
+<%= content_for(:title) do %>
+  HipCleaner - Votre pressing à domicile
+<% end %>
+
+<div class="jumbotron">
+
+
 </div>
