--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,16 +9,12 @@ $hip-color: rgb(132, 171, 168);
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "navbar";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,300');
 @import "home";
 
 
 .logo {
   height: 200px;
-}
-
-.logo-navbar {
-  height: 100px;
 }
 
 #wrapper {
@@ -99,7 +95,7 @@ $hip-color: rgb(132, 171, 168);
 }
 
 .sidebar-nav > .sidebar-brand {
-  height: 190px;
+  height: 210px;
 }
 
 .sidebar-nav > .sidebar-brand a {
@@ -141,4 +137,8 @@ $hip-color: rgb(132, 171, 168);
         position: relative;
         margin-right: 0;
     }
+}
+
+.padding-none {
+  padding: 0;
 }
