--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,7 +1,7 @@
 <div id="sidebar-wrapper">
   <ul class="sidebar-nav">
     <li class="sidebar-brand">
-      <%= link_to new_order_path do %>
+      <%= link_to new_order_path, class: "padding-none" do %>
         <%= image_tag "logo.png", class: "logo" %>
       <% end %>
     </li>
@@ -22,7 +22,7 @@
     </li>
     <li>
       <%= link_to orders_path do %>
-        <i class="fa fa-euro width-40"></i> Commandes
+        <i class="fa fa-list width-40"></i> Commandes
       <% end %>
     </li>
     <li>
