--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,16 +2,36 @@
   <h1>Mes informations</h1>
   <%= form_for @user do |f| %>
     <div class="form-group">
-      <%= f.label :first_name %>
+      <%= f.label :first_name, "Prénom" %>
       <%= f.text_field :first_name, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :last_name %>
+      <%= f.label :last_name, "Nom" %>
       <%= f.text_field :last_name, class: "form-control" %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
       <%= f.text_field :email, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :phone, "Téléphone" %>
+      <%= f.text_field :phone, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :street, "Rue" %>
+      <%= f.text_field :street, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :city, "Ville" %>
+      <%= f.text_field :city, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :zipcode, "Code postal" %>
+      <%= f.text_field :zipcode, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :zipcode, "Code postal" %>
+      <%= f.text_field :zipcode, class: "form-control" %>
     </div>
     <%= f.submit "Enregistrer", class: "btn btn-primary" %>
   <% end %>
