--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,8 +30,8 @@
       <%= f.text_field :zipcode, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :zipcode, "Code postal" %>
-      <%= f.text_field :zipcode, class: "form-control" %>
+      <%= f.label :address_details, "Code postal" %>
+      <%= f.textarea :address_details, class: "form-control" %>
     </div>
     <%= f.submit "Enregistrer", class: "btn btn-primary" %>
   <% end %>
