--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -26,7 +26,7 @@
       <% end %>
     </li>
     <li>
-      <%= link_to destroy_user_session_path do %>
+      <%= link_to destroy_user_session_path, method: :delete do %>
         <i class="fa fa-sign-out width-40"></i> Déconnexion
       <% end %>
     </li>
