--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @order do |f| %>
   <div class="form-group">
     <%= f.label :pickup_date, "Date de récupération" %>
-    <%= f.date_field :pickup_date, required: true, min: Date.today, class: "form-control" %>
+    <%= f.date_field :pickup_date, required: true, min: Time.now.hour < 16 ? Date.today : Date.today + 1, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :pickup_time, "A quelle heure" %>
