--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,52 @@
   HipCleaner - Votre pressing à domicile
 <% end %>
 
-<div class="jumbotron">
 
+<div class="jumbotron text-center">
+ <h1>Votre pressing à domicile, quand vous le souhaitez</h1>
+ <p><%= link_to "Découvrez HipCleaner", root_path, class: "btn btn-primary -lg" %></p>
+</div>
 
+<div class="why-hipcleaner">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('ordinateur.png') %>
+        <h4>Commande</h4>
+        <p>L'heure et la date, c'est vous qui décidez ! Commencez dès maintenant à organiser votre temps libre !</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('livraison.png') %>
+        <h4>Récupération</h4>
+        <p>Un de nos grooms passe prendre à votre linge à votre domicile</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('chemise.png') %>
+        <h4>Professionalisme</h4>
+        <p>Un service de qualité avec un pressing  </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="why-hipcleaner">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('ordinateur.png') %>
+        <h4>Commande</h4>
+        <p>L'heure et la date, c'est vous qui décidez ! Commencez dès maintenant à organiser votre temps libre !</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('livraison.png') %>
+        <h4>Récupération</h4>
+        <p>Un de nos grooms passe prendre à votre linge à votre domicile</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag ('chemise.png') %>
+        <h4>Professionalisme</h4>
+        <p>Un service de qualité avec un pressing  </p>
+      </div>
+    </div>
+  </div>
 </div>
