--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,8 +1,8 @@
 // Set your navbar general settings
-$color: grey;
+$color: white;
 $light-blue: #3498db;
 $dark-blue: #2980B9;
-$bg: #fff;
+$bg: rgb(132, 171, 168);
 $height: 40px;
 $vertical-height : 20px;
 $vertical-padding: 10px;
