--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@ $hip-color: rgb(132, 171, 168);
 @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,300');
 @import "home";
+@import "footer";
 
 
 .logo {
