--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -14,7 +14,7 @@
 
   <%= yield %>
 
-
+  <%= render "shared/footer" %>
   <%= javascript_include_tag 'application' %>
   <% javascript_tag do %>
   <% end %>
