--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,28 +16,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <%= link_to "#" do %>
-              <i class="fa fa-envelope-o"></i> Messages
-            <% end %>
-          </li>
-          <li class="dropdown">
-            <%= link_to "#", {class: "dropdown-toggle", "data-toggle" => "dropdown", "role" => "button", "aria-expanded" => "false"} do %>
-              <%= image_tag "http://lorempixel.com/30/30/people", class: "img-avatar" %>
-              Profile <span class="caret"></span>
-            <% end %>
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <%= link_to "link", "#" %>
-              </li>
-              <li>
-                <%= link_to "link", "#" %>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <%= link_to "Add something", "#", class: "btn" %>
-          </li>
+          <li><%= link_to 'Accueil', "#{root_path}#welcome-helper" %></li>
+          <li><%= link_to "Comment ça marche", "#{root_path}#how-it-works-scroll-helper" %></li>
+          <li><%= link_to "Prix", "#{root_path}#pricing-scroll-helper" %></li>
+          <li><%= link_to 'Faq', root_path %></li>
+
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
