--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
 
 
 <div class="jumbotron text-center">
- <h1>Votre pressing à domicile, quand vous le souhaitez</h1>
- <p><%= link_to "Découvrez HipCleaner", root_path, class: "btn btn-primary -lg" %></p>
+ <h1>VOTRE PRESSING A DOMICILE</h1>
+ <p><%= link_to "Découvrez HipCleaner", root_path, class: "btn btn-primary btn-lg", id: "btn-color" %></p>
 </div>
 
 <div class="why-hipcleaner text-center">
