--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,8 +5,8 @@
 .jumbotron {
   background-image: url('home.jpg');
   background-size: cover;
-  height: 800px;
-  padding-top: 200px;
+  height: 600px;
+  padding-top: 250px;
   color: white;
 }
 
@@ -53,4 +53,9 @@
 #pricing-scroll-helper {
   position: relative;
   bottom: 100px;
+}
+
+#btn-color {
+  background-color: rgb(132, 171, 168);
+  border: 0px;
 }
