--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-  background-image: url('home2.png');
+  background-image: url('home4.jpg');
   background-size: cover;
   height: 600px;
   padding-top: 250px;
