--- a/app/views/stripe_payments/new.html.erb
+++ b/app/views/stripe_payments/new.html.erb
@@ -1,21 +1,13 @@
-<div class="col-xs-12">
-  <h2>Coordonnées bancaires</h2>
-
-  <p>
-    Vos coordonnées bancaires sont transmises à notre prestataire de paiement Stripe sans transiter par nos serveurs.
-  </p>
-</div>
-
 <div class="col-md-4">
-  <%= form_tag stripe_customers_path, id: "stripe_customer_form" do %>
+  <%= form_tag stripe_payments_path, id: "stripe_payment_form" do %>
     <span class="payment-errors"></span>
     <div class="form-group">
-      <%= label_tag :number, "Numéro de carte" %>
-      <%= text_field_tag :number, nil, name: nil, size: 20, class: "form-control", html: {data-stripe: "number"}} %>
+      <%= label_tag :card_number, "Numéro de carte" %>
+      <%= text_field_tag :card_number, nil, name: nil, class: "form-control",html: {data: {stripe: "number"}} %>
     </div>
     <div class="form-group">
       <%= label_tag :card_code, "Code de sécurité (CVV)" %>
-      <%= text_field_tag :card_code, nil, name: nil, size: 4, class: "form-control", html: {data: {stripe: "cvc"}} %>
+      <%= text_field_tag :card_code, nil, name: nil, class: "form-control", html: {data: {stripe: "cvc"}} %>
     </div>
     <div class="form-group">
       <%= label_tag :card_month, "Expiration" %>
@@ -50,10 +42,6 @@
         var token = response.id;
         // Insert the token into the form so it gets submitted to the server
         $form.append($('<input type="hidden" name="stripeToken" />').val(token));
-        var card = response.card;
-        bug
-        // Insert the token into the form so it gets submitted to the server
-        $form.append($('<input type="hidden" name="stripeCard" />').val(card));
         // and submit
         $form.get(0).submit();
       }
