button navbar van

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -2,7 +2,7 @@
 $color: white;
 $light-blue: #3498db;
 $dark-blue: #2980B9;
-$bg: rgb(132, 171, 168);
+$bg: rgba(40, 40, 40, 0.5);
 $height: 40px;
 $vertical-height : 20px;
 $vertical-padding: 10px;
