--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,16 +18,19 @@
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <%= image_tag ('ordinateur.png') %>
+        <div class="vertical-spacer"></div>
         <h4>Commande</h4>
         <p>L'heure et la date, c'est vous qui décidez ! Commencez dès maintenant à organiser votre temps libre !</p>
       </div>
       <div class="col-xs-12 col-sm-4">
         <%= image_tag ('livraison.png') %>
+        <div class="vertical-spacer"></div>
         <h4>Récupération</h4>
         <p>Un de nos grooms passe prendre votre linge à votre domicile</p>
       </div>
       <div class="col-xs-12 col-sm-4">
         <%= image_tag ('chemise.png') %>
+        <div class="vertical-spacer"></div>
         <h4>Professionalisme</h4>
         <p>Nous travaillons uniquement avec des pressings connus et reconnus pour leur savoir-faire et leur expérience </p>
       </div>
@@ -50,7 +53,7 @@
                 <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Pressing</h4></th>
               </tr>
             </thead>
-            <tbody>
+            <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
                 <td>Costume</td>
                 <td>16,00€</td>
@@ -72,21 +75,21 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Pressing</h4></th>
+                <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Blanchisserie</h4></th>
               </tr>
             </thead>
-            <tbody>
+            <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
-                <td>Pantalon</td>
-                <td>7,50€</td>
-              </tr>
-              <tr>
-                <td>Pull</td>
-                <td>6,00€</td>
-              </tr>
-              <tr>
-                <td>Cravate</td>
+                <td>Drap</td>
                 <td>7,00€</td>
+              </tr>
+              <tr>
+                <td>Housse de couette</td>
+                <td>13,00€</td>
+              </tr>
+              <tr>
+                <td>Taie d'oreiller</td>
+                <td>5,00€</td>
               </tr>
             </tbody>
           </table>
@@ -100,18 +103,18 @@
                 <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Ameublement</h4></th>
               </tr>
             </thead>
-            <tbody>
+            <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
-                <td>Costume</td>
-                <td>16,00€</td>
+                <td>Couette</td>
+                <td>20,00€</td>
               </tr>
               <tr>
-                <td>Chemise</td>
-                <td>4,00€</td>
+                <td>Oreiller</td>
+                <td>14,00€</td>
               </tr>
               <tr>
-                <td>Robe</td>
-                <td>10,00€</td>
+                <td>Coussin</td>
+                <td>7,00€</td>
               </tr>
             </tbody>
           </table>
