--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,11 @@ $hip-color: rgb(132, 171, 168);
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,300');
 @import "home";
 @import "footer";
-
+@import "navbar";
 
 .logo {
   height: 200px;
 }
-
 
 #wrapper {
   padding-left: 0;
