--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,11 +1,11 @@
 .black-footer {
-  background-color: rgb(132, 171, 168);
+  background-color: rgba(40, 40, 40, 0.9);
   color: white;
   padding: 30px 0px;
 }
 
 .black-footer a {
-  color: black;
+  color: white;
 }
 
 .black-footer a:hover {
