--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,14 +11,16 @@
 }
 
 .jumbotron h1 {
-  font-size: 32px;
+  font-size: 42px;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, .8);
-  font-weight: normal;
 }
 
+.vertical-spacer {
+  height: 2em;
+}
 
 .why-hipcleaner {
-  padding-top: 30px;
+  padding-top: 50px;
   padding-bottom: 60px;
 }
 
@@ -47,15 +49,19 @@
 
 #how-it-works-scroll-helper {
   position: relative;
-  bottom: 100px;
+  bottom: 80px;
 }
 
 #pricing-scroll-helper {
   position: relative;
-  bottom: 100px;
+  bottom: 80px;
 }
 
 #btn-color {
-  background-color: rgb(132, 171, 168);
+  background-color: rgb(255, 0, 0);
   border: 0px;
+}
+
+.table tbody td {
+  border:1px solid rgba(30, 30, 30, 0.9);
 }
