--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="<%= (yield(:description) || "").squish %>">
   <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= favicon_link_tag %>
   <%= yield(:stylesheets) %>
   <%= csrf_meta_tags %>
 </head>
