--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <div id="wrapper">
     <% if user_signed_in? %>
       <%= render "shared/sidenav" %>
+    <% else %>
+      <%= render "shared/welcome_sidenav" %>
     <% end %>
     <!-- /#sidebar-wrapper -->
 
