fixed bug for Stripe

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -62,6 +62,6 @@
   border: 0px;
 }
 
-.table tbody td {
-  border:1px solid rgba(30, 30, 30, 0.9);
+.table-home tbody td {
+  border: 1px solid rgba(30, 30, 30, 0.9);
 }
