--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-4 padding-none">
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table class="table table-home table-hover">
             <thead>
               <tr>
                 <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Pressing</h4></th>
@@ -72,7 +72,7 @@
       </div>
       <div class="col-xs-12 col-sm-4 padding-none">
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table class="table table-home table-hover">
             <thead>
               <tr>
                 <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Blanchisserie</h4></th>
@@ -97,7 +97,7 @@
       </div>
       <div class="col-xs-12 col-sm-4 padding-none">
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table class="table table-home table-hover">
             <thead>
               <tr>
                 <th colspan="2" style="background-color:RGBA(40, 40, 40, 0.9);color:#fff;border:1px solid rgba(30, 30, 30, 0.9);"><h4 style="color:#fff" class="servicestitle text-center">Ameublement</h4></th>
