--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
         <%= link_to root_path do %>
-        <%= image_tag "logo.png", class: "navbar-brand", id: "logo" %>
+        <%= image_tag "logo-horizontal.png", class: "navbar-brand", id: "logo" %>
         <% end %>
     </div>
 
