presque rien fait

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 <div class="jumbotron text-center">
  <h1>VOTRE PRESSING A DOMICILE</h1>
  <br>
- <p><%= link_to "Découvrez HipCleaner", root_path, class: "btn btn-primary btn-lg", id: "btn-color" %></p>
+ <p><%= link_to "Découvrez HipCleaner", new_order_path, class: "btn btn-primary btn-lg", id: "btn-color" %></p>
 </div>
 
 <div class="why-hipcleaner text-center">
