fixing assets on heroku --attempt#1

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-  background-image: asset_url('home4.jpg');
+  background-image: asset-url(asset-path('home4.jpg'));
   background-size: cover;
   height: 600px;
   padding-top: 250px;
