--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-  background-image: asset-url(asset-path('home4.jpg'));
+  background-image: asset-url('home4.jpg', image);
   background-size: cover;
   height: 600px;
   padding-top: 250px;
