--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-  background-image: asset-url('home4.jpg', image);
+  background-image: asset-data-url("home4.jpg");
   background-size: cover;
   height: 600px;
   padding-top: 250px;
