fixing assets on heroku --attempt#6

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-  background: url(image_path("home4.jpg"));
+  background-image: image-url("home4.jpg");
   background-size: cover;
   height: 600px;
   padding-top: 250px;
