--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,15 +81,15 @@
             <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
                 <td>Drap</td>
-                <td>7,00€</td>
+                <td>6,00€</td>
               </tr>
               <tr>
                 <td>Housse de couette</td>
-                <td>13,00€</td>
+                <td>4,00€</td>
               </tr>
               <tr>
                 <td>Taie d'oreiller</td>
-                <td>5,00€</td>
+                <td>10,00€</td>
               </tr>
             </tbody>
           </table>
@@ -106,22 +106,22 @@
             <tbody style="border:1px solid rgba(30, 30, 30, 0.9)">
               <tr>
                 <td>Couette</td>
-                <td>20,00€</td>
+                <td>19,00€</td>
               </tr>
               <tr>
-                <td>Oreiller</td>
-                <td>14,00€</td>
+                <td>Housse de canapé</td>
+                <td>23,00€</td>
               </tr>
               <tr>
-                <td>Coussin</td>
-                <td>7,00€</td>
+                <td>Oreiller synthétique</td>
+                <td>10,00€</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
       <div class="col-xs-12 minimum-order">
-        <p>Commande minimum de 20 €. Frais de livraison de 7€, offerts à partir de 35€.</p>
+        <p>Commande minimum de 20 €. Frais de livraison de 7€, offerts à partir de 35€.  <%= link_to 'Plus de prix ici', tarifs_path %></p>
       </div>
     </div>
   </div>
