--- a/app/views/shared/_welcome_sidenav.html.erb
+++ b/app/views/shared/_welcome_sidenav.html.erb
@@ -8,7 +8,14 @@
     <li>
       <h4>Bienvenue sur HipCleaner</h4>
     </li>
+
     <li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'DECONNEXION', destroy_user_session_path, method: 'delete' %></li>
+        <% else %>
+          <li><%= link_to 'Inscription', new_user_registration_path %></li>
+          <li><%= link_to 'Connexion', new_user_session_path %></li>
+        <% end %>
     </li>
     <li>
     </li>
