--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -8,6 +8,23 @@
   height: 600px;
   padding-top: 250px;
   color: white;
+  font-weight: 700;
+}
+
+.jumbotron h1 {
+  font-weight: 700;
+}
+
+.jumbotron p {
+  font-weight: 300;
+}
+
+.jumbotronfaq {
+  background-image: image-url("home4.jpg");
+  background-size: cover;
+  height: 200px;
+  padding-top: 100px;
+  color: white;;
 }
 
 .jumbotron h1 {
@@ -20,8 +37,8 @@
 }
 
 .why-hipcleaner {
-  padding-top: 50px;
-  padding-bottom: 60px;
+  padding-top: 70px;
+  padding-bottom: 80px;
 }
 
 .title {
@@ -45,6 +62,12 @@
 .map {
   padding-top: 40px;
   padding-bottom: 60px;
+  background-color: #F4F4F4
+}
+
+.faq {
+  padding-top: 40px;
+  padding-bottom: 60px;
 }
 
 #how-it-works-scroll-helper {
@@ -58,11 +81,29 @@
 }
 
 #btn-color {
-  background-color: rgb(229, 25, 50);
+  background-color: rgba(80, 80, 80, 0.9);
   border: 0px;
+  transition: all 0.5s ease-in;
+}
+
+#btn-color:hover{
+  background-color: rgb(239, 72, 54);
 }
 
 .table-home tbody td {
   border: 1px solid rgba(30, 30, 30, 0.9);
+}
+
+.users {
+  padding: 80px;
+}
+
+.comment {
+  padding: 0 70px;
+}
+
+.comment img {
+  border-radius: 50%;
+  padding-bottom: 4px;
 }
 
