--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -187,7 +187,7 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-sm-9 text-center minimum-order">
+      <div class="col-xs-12 col-sm-8 col-md-offset-1 text-center minimum-order">
         <p>Commande minimum de 20 €. Frais de livraison de 7€, offerts à partir de 35€.</p>
       </div>
     </div>
