--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -17,6 +17,22 @@
   <%= render "shared/footer" %>
   <%= javascript_include_tag 'application' %>
   <% javascript_tag do %>
+  $(function(){
+  $(window).scroll(function(e){
+    if ($(this).scrollTop() > 100px) {
+      $(".navbar").css({
+        "background": "rgba(0, 0, 0, 0.7)",
+        "box-shadow": "0 0 2px black"
+      });
+    }
+    else {
+      $(".navbar").css({
+        "background": "transparent",
+         "box-shadow": "0 0 0px transparent"
+      });
+    }
+  });
+})
   <% end %>
   <%= yield(:js) %>
 </body>
