--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <%= yield(:stylesheets) %>
   <%= favicon_link_tag %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/ga' %>
+
 </head>
 <body>
   <div id="wrapper">
