mailer welcome changed

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -19,7 +19,7 @@
       Dans tous les cas, c'est par ici :
     </p>
 
-    <%= link_to "Je fais ma première commande gratuite", new_order_url %>
+    <%= link_to "Je fais ma première commande", new_order_url %>
 
   </body>
 </html>
