--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -8,4 +8,4 @@ Pour pouvoir récupérer ton linge sans problème, nous avons besoin de toutes l
 
 Dans tous les cas, c'est par ici :
 
-<%= link_to "Je fais ma première commande gratuite", new_order_url %>
+<%= link_to "Je fais ma première commande", new_order_url %>
